# tranbyos

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  README.docx  README.md  build-cross-compiler.sh  build-homebrew-cross-compiler.sh  build-osx-gcc-elf-cross-compiler.sh  codenames.txt  copyimg.sh  gdt.c  grub.lst  grub_disk.img  hd.c  idt.c  io.c  irq.c  kb.c  link.ld  main.c  makefile  mm.c  rakefile  readme.md  readme.txt  scrn.c  start.asm  tags  timer.c  update_image.bat
docs/: README.doc
include/: fs.h  hd.h  kb.h  multiboot.h  system.h
setup/: build-cross-compiler.sh  build-homebrew-cross-compiler.sh  build-osx-llvm-cross-compiler.sh
setup/cross_compilers/: i386-elf-binutils.rb  i386-elf-gcc.rb  i386-elf-gdb.rb  x64-elf-gcc.rb  x64-elf-gdb.rb
src/: _test.cpp  _unity_build.c  _unity_build.cpp  fs.c  gdt.c  gui.c  hd.c  idt.c  io.c  irq.c  isrs.c  kb.c  main.c  mm.c  scrn.c  start.asm  string.c  task.c  test.cpp  timer.c  vesa.c  vga.c
src/asm/: boot-minimal.s  cpuid.s  kernel.s  start.s  test.s
src/include/: fs.h  hd.h  kb.h  multiboot.h  system.h  systemcpp.h
tools/: TODO.txt  bochs.sample.cfg  build-copykernel-grub.sh  build-grub-osx.sh  build-i386.sh  build-kernel-floppy.sh  create_grub_disk.sh  grub.cfg  grub_disk.img  grub_disk_backup.img  link.ld  mketags.sh  tranbyos-hd-32mb.img  tranbyos-hd-64mb.img  update_image.bat
tools/tmp/boot/grub/: grub.cfg
tools/xcode/TestTranbyOS.xcodeproj/: project.pbxproj
tools/xcode/TestTranbyOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tools/xcode/TranbyOSDummyC/: main.c
(+5 files in other folders)
